[gd_scene load_steps=7 format=3 uid="uid://c62tegs0huo6y"]

[ext_resource type="Script" uid="uid://ctxfwebye06c0" path="res://Scripts/main_scene.gd" id="1_4kvl3"]
[ext_resource type="Texture2D" uid="uid://ca1ssjnko36l6" path="res://art/bg.png" id="1_31fxm"]
[ext_resource type="PackedScene" uid="uid://c5q1w1tn7a5vb" path="res://Scene/player.tscn" id="2_06yma"]
[ext_resource type="PackedScene" uid="uid://dgvcgvpbxc3xg" path="res://Scene/ground.tscn" id="4_4kvl3"]
[ext_resource type="PackedScene" uid="uid://chcbehtxyr6kw" path="res://Scene/column.tscn" id="5_lttqn"]
[ext_resource type="PackedScene" uid="uid://dbiydrgaundb6" path="res://Scene/hud.tscn" id="6_lee88"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_4kvl3")
pipe_scene = ExtResource("5_lttqn")
metadata/_edit_group_ = true

[node name="background" type="Sprite2D" parent="."]
position = Vector2(216, 322)
texture = ExtResource("1_31fxm")

[node name="Player" parent="." instance=ExtResource("2_06yma")]

[node name="GroundArea" parent="." instance=ExtResource("4_4kvl3")]

[node name="PipeTimer" type="Timer" parent="."]
editor_description = "生成柱子"
wait_time = 1.8

[node name="HUD" parent="." instance=ExtResource("6_lee88")]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="fail" from="Player" to="." method="game_over"]
[connection signal="score_add" from="Player" to="." method="add_score"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
